plugins {
    id 'fabric-loom' version '1.11-SNAPSHOT'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

compileJava {
    options.compilerArgs += ['-h', "${projectDir}/src/main/native/include"]
    outputs.upToDateWhen { false }
}

// --- Generated config source set ---
// Java config classes are generated by MCVR's CMake codegen step (generate_config target).
// Radiance only compiles them — no cross-repo codegen dependency here.
sourceSets {
    main {
        java {
            srcDir 'src/generated/java'
            srcDir "${buildDir}/generated/sources/buildInfo/java/main"
        }
    }
}

loom {
    accessWidenerPath = file("src/main/resources/radiance.accesswidener")
}

// Branch-specific game directory: Radiance-Clouds → mc-test/clouds, Radiance → mc-test/main
def worktreeSuffix = project.projectDir.name.replaceFirst(/^Radiance-?/, '')
def runDirName = worktreeSuffix.isEmpty() ? 'main' : worktreeSuffix.toLowerCase()

tasks.named("runClient", JavaExec) {
    args "--gameDir", file("../mc-test/${runDirName}").absolutePath
    args "--width", "1920", "--height", "1080"
    // Force Java 21 for runtime — LWJGL 3.3.3 is incompatible with Java 25
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    // Add repositories to retrieve artifacts from in here.
    // You should only use this when depending on other mods because
    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
    // for more information about repositories.
    maven {
        name = "Fabric"
        url = "https://maven.fabricmc.net/"
    }
    maven {
        name = "Mojang"
        url = "https://libraries.minecraft.net/"
    }
    mavenCentral()
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    // https://mvnrepository.com/artifact/org.yaml/snakeyaml
    implementation "org.yaml:snakeyaml:2.5"
    include "org.yaml:snakeyaml:2.5"
}

// Platform-specific native library support
// Usage: ./gradlew build -Pplatform=windows  (default)
//        ./gradlew build -Pplatform=linux
//        ./gradlew buildAllPlatforms           (builds both)
def platform = project.hasProperty('platform') ? project.property('platform') : 'windows'

def resolveGitCommit = {
    try {
        def stdout = new ByteArrayOutputStream()
        def stderr = new ByteArrayOutputStream()
        def result = exec {
            commandLine 'git', 'rev-parse', '--short=12', 'HEAD'
            standardOutput = stdout
            errorOutput = stderr
            ignoreExitValue = true
        }
        def text = stdout.toString('UTF-8').trim()
        return result.exitValue == 0 && !text.isEmpty() ? text : 'unknown'
    } catch (Exception ignored) {
        return 'unknown'
    }
}

def gitCommit = resolveGitCommit()

def resolveGitCommitFull = {
    try {
        def stdout = new ByteArrayOutputStream()
        def result = exec {
            commandLine 'git', 'rev-parse', 'HEAD'
            standardOutput = stdout
            errorOutput = new ByteArrayOutputStream()
            ignoreExitValue = true
        }
        def text = stdout.toString('UTF-8').trim()
        return result.exitValue == 0 && !text.isEmpty() ? text : 'unknown'
    } catch (Exception ignored) { return 'unknown' }
}

def resolveGitBranch = {
    try {
        def stdout = new ByteArrayOutputStream()
        def result = exec {
            commandLine 'git', 'rev-parse', '--abbrev-ref', 'HEAD'
            standardOutput = stdout
            errorOutput = new ByteArrayOutputStream()
            ignoreExitValue = true
        }
        def text = stdout.toString('UTF-8').trim()
        return result.exitValue == 0 && !text.isEmpty() ? text : 'unknown'
    } catch (Exception ignored) { return 'unknown' }
}

def resolveGitDirty = {
    try {
        def result = exec {
            commandLine 'git', 'diff', '--quiet'
            errorOutput = new ByteArrayOutputStream()
            ignoreExitValue = true
        }
        return result.exitValue != 0
    } catch (Exception ignored) { return true }
}

def fullGitCommit = resolveGitCommitFull()
def gitBranch = resolveGitBranch()
def gitDirty = resolveGitDirty()
def buildTimestamp = new Date().format("yyyy-MM-dd'T'HH:mm:ss'Z'", TimeZone.getTimeZone('UTC'))

// --- Generate BuildInfo.java (V4 pipeline, ABI 6 contract) ---
tasks.register('generateBuildInfo') {
    def outputDir = layout.buildDirectory.dir("generated/sources/buildInfo/java/main/com/radiance/client/build")
    outputs.dir outputDir
    doLast {
        def content = """package com.radiance.client.build;

/**
 * Build identity for Radiance mod.
 *
 * Generated at build time by gradle task generateBuildInfo.
 * V4 pipeline, ABI 6 contract. Runtime artifact hashes are computed from loaded files.
 */
public final class BuildInfo {

    /** Git commit hash (full 40-char hex). */
    public static final String REPO_COMMIT = "${fullGitCommit}";

    /** Git branch name. */
    public static final String BRANCH = "${gitBranch}";

    /** Whether the working tree had uncommitted changes at build time. */
    public static final boolean DIRTY = ${gitDirty};

    /** ISO-8601 timestamp of the build. */
    public static final String BUILD_TIMESTAMP = "${buildTimestamp}";

    /** Texture loader ABI version — must match native side. */
    public static final int TEXTURE_LOADER_ABI_VERSION = 6;

    /** Cache schema version — must match native side. */
    public static final int CACHE_SCHEMA_VERSION = 5;

    private BuildInfo() {}

    public static String summary() {
        return "Radiance commit=" + REPO_COMMIT
            + " branch=" + BRANCH
            + " dirty=" + DIRTY
            + " abi=" + TEXTURE_LOADER_ABI_VERSION
            + " cache=" + CACHE_SCHEMA_VERSION
            + " built=" + BUILD_TIMESTAMP;
    }

}
"""
        def dir = outputDir.get().asFile
        dir.mkdirs()
        new File(dir, 'BuildInfo.java').text = content
    }
}

compileJava.dependsOn generateBuildInfo
afterEvaluate {
    tasks.findByName('sourcesJar')?.dependsOn(generateBuildInfo)
}

processResources {
    inputs.property "version", project.version
    inputs.property "minecraft_version", project.minecraft_version
    inputs.property "loader_version", project.loader_version
    inputs.property "platform", platform
    inputs.property "git_commit", gitCommit
    filteringCharset "UTF-8"

    filesMatching("fabric.mod.json") {
        expand "version": project.version,
                "minecraft_version": project.minecraft_version,
                "loader_version": project.loader_version
    }
    filesMatching("radiance-build.properties") {
        expand "version": project.version,
                "minecraft_version": project.minecraft_version,
                "loader_version": project.loader_version,
                "platform": platform,
                "git_commit": gitCommit
    }

    // Copy platform-specific native libraries into jar resources
    from("natives/${platform}") {
        include '*.dll', '*.lib', '*.so'
    }
}

def targetJavaVersion = 21
tasks.withType(JavaCompile).configureEach {
    // ensure that the encoding is set to UTF-8, no matter what the system default is
    // this fixes some edge cases with special characters not displaying correctly
    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
    // If Javadoc is generated, this must be specified in that task too.
    it.options.encoding = "UTF-8"
    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
        it.options.release.set(targetJavaVersion)
    }
}

java {
    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
    if (JavaVersion.current() < javaVersion) {
        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
    }
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}" }
    }
}

tasks.named("remapJar") {
    archiveFileName.set("${project.archives_base_name}-${project.version}-fabric-${project.minecraft_version}-${platform}.jar")
}

// Task to build jars for all platforms
tasks.register("buildAllPlatforms") {
    group = "build"
    description = "Builds platform-specific jars for Windows and Linux"
    doLast {
        ['windows', 'linux'].each { plat ->
            println "Building for platform: ${plat}"
            project.exec {
                workingDir = project.projectDir
                commandLine 'cmd', '/c', 'gradlew.bat', 'clean', 'build', "-Pplatform=${plat}"
            }
            // Copy the built jar to a collected output directory
            def srcFile = file("build/libs/${project.archives_base_name}-${project.version}-fabric-${project.minecraft_version}-${plat}.jar")
            def destDir = file("build/release")
            destDir.mkdirs()
            if (srcFile.exists()) {
                ant.copy(file: srcFile, todir: destDir)
                println "Copied ${srcFile.name} to build/release/"
            }
        }
    }
}

tasks.named("remapSourcesJar") {
    archiveFileName.set("${project.archives_base_name}-${project.version}-fabric-${project.minecraft_version}-sources.jar")
}

tasks.register("materialLabSelfTest", JavaExec) {
    group = "verification"
    description = "Runs strict Material Lab recipe and texture-rule ABI checks"
    classpath = sourceSets.main.runtimeClasspath
    mainClass = "com.radiance.client.autopbr.MaterialLabSelfTest"
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.register("autopbrGraphSelfTest") {
    group = "verification"
    description = "Deprecated alias for materialLabSelfTest"
    dependsOn tasks.named("materialLabSelfTest")
}

tasks.named("check") {
    dependsOn tasks.named("materialLabSelfTest")
}

// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}
